--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Main css-->
-    <link rel="stylesheet" href="/home/tosonamy/Desktop/Wep projects/Kasper/css/kasber.css">
+    <link rel="stylesheet" href="css/kasber.css">
     <!--Normalize css-->
-    <link rel="stylesheet" href="/home/tosonamy/Desktop/Wep projects/Kasper/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
      <!-- Font Awesome Library -->
      <link rel="stylesheet" href="css/all.min.css" />
          <!-- Google Fonts -->
