--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="tab">
             <div class="logo">
-                <img src="../Kasper/images/logo.png" alt="Logo">
+                <img src="../images/logo.png" alt="Logo">
             </div>
             <div class="links">
                 <div class="link">
