--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="tab">
             <div class="logo">
-                <img src="../images/logo.png" alt="Logo">
+                <img src="images/logo.png" alt="Logo">
             </div>
             <div class="links">
                 <div class="link">
@@ -108,7 +108,7 @@
     </ul>
    </div>
    <div class="image">
-       <img src="../Kasper/images/mobile.png" alt="phones">
+       <img src="images/mobile.png" alt="phones">
    </div>
 </div>
 <!--End desin-->
@@ -128,7 +128,7 @@
 <div class="cards">
     <!--start card-->
     <div class="card">
-          <img src="../Kasper/images/shuffle-01.jpg" alt="photo">
+          <img src="images/shuffle-01.jpg" alt="photo">
       <div class="text">
          <p>Awesome Image</p>
         <h4>Photography</h4>
@@ -137,7 +137,7 @@
     <!--End card-->
     <!--start card-->
         <div class="card">
-             <img src="../Kasper/images/shuffle-02.jpg" alt="photo">
+             <img src="images/shuffle-02.jpg" alt="photo">
          <div class="text">
             <p>Awesome Image</p>
             <h4>  Photography</h4>
@@ -146,7 +146,7 @@
     <!--End card-->
     <!--start card-->
     <div class="card">
-            <img src="../Kasper/images/shuffle-03.jpg" alt="photo">
+            <img src="images/shuffle-03.jpg" alt="photo">
         <div class="text">   
                   <p>Awesome Image</p>
             <h4>  Photography<h4>
@@ -155,7 +155,7 @@
       <!--End card-->
     <!--start card-->
     <div class="card">
-            <img src="../Kasper/images/shuffle-04.jpg" alt="photo">
+            <img src="images/shuffle-04.jpg" alt="photo">
         <div class="text">
             <p>Awesome Image</p>
             <h4>  Photography</h4>
@@ -164,7 +164,7 @@
       <!--End card-->
     <!--start card-->
     <div class="card">
-            <img src="../Kasper/images/shuffle-05.jpg" alt="photo">
+            <img src="images/shuffle-05.jpg" alt="photo">
         <div class="text">
             <p>Awesome Image</p>
             <h4>  Photography</h4>
@@ -173,7 +173,7 @@
       <!--End card-->
     <!--start card-->
     <div class="card">
-            <img src="../Kasper/images/shuffle-06.jpg" alt="photo">
+            <img src="images/shuffle-06.jpg" alt="photo">
         <div class="text">
             <p>Awesome Image</p>
             <h4>  Photography</h4>
@@ -182,7 +182,7 @@
       <!--End card-->
     <!--start card-->
     <div class="card">
-            <img src="../Kasper/images/shuffle-07.jpg" alt="photo">
+            <img src="images/shuffle-07.jpg" alt="photo">
         <div class="text">
             <p>Awesome Image</p>
             <h4>  Photography</h4>
@@ -191,7 +191,7 @@
       <!--End card-->
     <!--start card-->
     <div class="card">
-            <img src="../Kasper/images/shuffle-08.jpg" alt="photo">
+            <img src="images/shuffle-08.jpg" alt="photo">
         <div class="text">
             <p>Awesome Image</p>
             <h4>  Photography</h4>
@@ -205,7 +205,7 @@
 <!--Start video-->
 <div class="video">
     <video autoplay muted loop>
-        <source src="../Kasper/images/awesome-video.mp4" type="video/mp4" />
+        <source src="images/awesome-video.mp4" type="video/mp4" />
       </video>    <div class="text">
         <h3>SUPER AWESOME VIDEO HERE </h3>
         <p>Its All You Need</p>
@@ -217,7 +217,7 @@
 <div class="about">
     <h2 class="special">About US</h2>
     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt. </p>
-    <img src="../Kasper/images/about.png" alt="photo">
+    <img src="images/about.png" alt="photo">
 </div>
 <!-- End about-->
 <!--Start info-->
@@ -258,7 +258,7 @@
                   <div class="char">
                       <div class="card">
                           <div class="image">
-                              <img src="../Kasper/images/skills-01.jpg" alt="skills photo">
+                              <img src="images/skills-01.jpg" alt="skills photo">
                           </div>
                           <div class="information">
                           <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
@@ -268,7 +268,7 @@
                       <hr>
                       <div class="card">
                           <div class="image">
-                              <img src="../Kasper/images/skills-02.jpg" alt="skills photo">
+                              <img src="images/skills-02.jpg" alt="skills photo">
                           </div>
                           <div class="information">
                         <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
@@ -459,7 +459,7 @@
 <!--Start footer-->
 <div class="footer">
     <div class="cotainer">
-        <img src="../Kasper/images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo">
         <p class="first">We Are Social</p>
         <div class="social-icons">
           <i class="fab fa-facebook-f"></i>
